<resources>
    <string name="app_name">チラブラ</string>
    <string name="title_new">新着</string>
    <string name="title_search">検索</string>
    <string name="title_user">ユーザー</string>
    <string name="title_tubuyaki">つぶやき</string>
    <string name="title_notifications">通知</string>
    <string name="title_log_tubuyaki">つぶやきログ</string>
    <string name="title_log_res">レスログ</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_post">書き込み</string>
    <string name="title_activity_stamp">スタンプ選択</string>
    <string name="title_activity_login">ログイン</string>

    <!-- Preference Titles -->
    <string name="general_header">一般</string>
    <string name="detail_header">詳細</string>
    <string name="new_header">新着</string>
    <string name="new_detail_header">新着(詳細)</string>
    <string name="tubuyaki_header">つぶやき</string>
    <string name="hide_header">非表示</string>
    <string name="post_header">書き込み</string>
    <string name="notice_header">通知</string>

    <!-- Messages Preferences -->
    <string name="general_xml_resource_title">tiraXMLのURL</string>
    <string name="general_img_resource_title">画像のURL</string>
    <string name="general_dark_title">ダークテーマ</string>
    <string name="general_dark_summary_on">暗い環境に適したテーマで表示します</string>
    <string name="general_dark_summary_off">通常のテーマで表示します</string>

    <string name="general_tiraura_resource_title">チラ裏.comのURL</string>

    <string name="new_entries_count_title">最大新着表示数</string>
    <string name="new_reply_title">レス表示</string>
    <string name="new_reply_summary_on">新着にレスを表示します(パフォーマンスに大きく影響します)</string>
    <string name="new_reply_summary_off">新着にレスを表示しません</string>
    <string name="new_reply_count_title">最大レス表示数</string>

    <string name="new_detail_entry_line_title">つぶやき表示行数制限</string>
    <string name="new_detail_reply_line_title">レス表示行数制限</string>

    <string name="tubuyaki_rich_text_title">リッチテキスト</string>

    <string name="hide_anti_abayo_tubuyaki_title">アンチあばよ(つぶやき)</string>
    <string name="hide_anti_abayo_res_title">アンチあばよ(レス)</string>

    <string name="post_sage_memory_tubuyaki_title">非表示記憶(つぶやき)</string>
    <string name="post_sage_memory_res_title">sage記憶(レス)</string>

    <string name="notice_tarm_title">通知間隔</string>
    <string name="notice_tubuyaki_title">つぶやき通知</string>
    <string name="notice_res_title">レス通知</string>
    <string name="notice_notice_title">おしらせ通知(beta)</string>
    <string name="notice_message_title">メッセージ通知(beta)</string>

    <string name="detail_cache_size_title">画像キャッシュ(再起動後に有効)</string>
</resources>
