<!--
  ~ Copyright 2018 The app Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/general_header">

        <EditTextPreference
            app:key="xml_resource"
            app:title="@string/general_xml_resource_title"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:key="img_resource"
            app:title="@string/general_img_resource_title"
            app:useSimpleSummaryProvider="true" />

        <SwitchPreferenceCompat
            app:key="dark"
            app:summaryOff="@string/general_dark_summary_off"
            app:summaryOn="@string/general_dark_summary_on"
            app:title="@string/general_dark_title" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/new_header">

        <ListPreference
            app:defaultValue="10"
            app:entries="@array/entries_count"
            app:entryValues="@array/entries_count"
            app:key="entries_count"
            app:title="@string/new_entries_count_title"
            app:useSimpleSummaryProvider="true" />

        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:key="reply"
            app:summaryOff="@string/new_reply_summary_off"
            app:summaryOn="@string/new_reply_summary_on"
            app:title="@string/new_reply_title" />

        <ListPreference
            app:defaultValue="3"
            app:dependency="reply"
            app:entries="@array/reply_count"
            app:entryValues="@array/reply_count_value"
            app:key="reply_count"
            app:title="@string/new_reply_count_title"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="5"
            app:entries="@array/line_limit_count"
            app:entryValues="@array/line_limit_count_value"
            app:key="entry_line_limit"
            app:title="@string/new_detail_entry_line_title"
            app:useSimpleSummaryProvider="true" />
        <ListPreference
            app:defaultValue="2"
            app:dependency="reply"
            app:entries="@array/line_limit_count"
            app:entryValues="@array/line_limit_count_value"
            app:key="reply_line_limit"
            app:title="@string/new_detail_reply_line_title"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/detail_header">
        <EditTextPreference
            app:key="tiraura_resource"
            app:title="@string/general_tiraura_resource_title"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

</PreferenceScreen>
